# ncurses-native

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ncurses-cabi/: Cargo.toml  build.rs  version.map
crates/ncurses-cabi/include/: curses.h  tinfo.h
crates/ncurses-cabi/pkgconfig/: ncursesw.pc  tinfo.pc
crates/ncurses-cabi/src/: lib.rs
crates/ncurses-terminal/: Cargo.toml
crates/ncurses-terminal/src/: lib.rs
crates/ncurses-tinfo-cabi/: Cargo.toml  build.rs  version.map
crates/ncurses-tinfo-cabi/src/: lib.rs
crates/ncurses-tools/: Cargo.toml
docs/: capabilities.md  gap-ledger.md  terminal-ecology.md  terminfo-atlas.md
docs-src/models/: c-api.json  keys.json  parity.model.json  terminfo-caps.json
examples/: attr_db.rs  color2_eval.rs  color_db.rs  color_eval.rs  curs_set_eval.rs  doupdate_db.rs  doupdate_db2.rs  doupdate_dump.rs  dump.rs  key_decode.rs  key_eval.rs  keyname_eval.rs  mouse_eval.rs  mvcur_db.rs  mvcur_dump.rs  slk_eval.rs  tcap_dump.rs  termattrs_dump.rs  tinfo_dump.rs  tinfo_load_dump.rs  tparm_eval.rs  tputs_eval.rs  wattr_eval.rs  wgeom_eval.rs  win_eval.rs
reports/oracle/: NCURSES.ACS.json  NCURSES.ATTR_SET.json  NCURSES.ATTR_STR.json  NCURSES.BKGD.NOOUTPUT.json  NCURSES.BYTE.FRAME.FULL.json  NCURSES.CABI.GETCH.json  NCURSES.CABI.json  NCURSES.CAP.BEL.json  NCURSES.CAP.CLEAR.json  NCURSES.CAP.CUP.json  NCURSES.CAP.CUU1.json  NCURSES.CAP.ED.json  NCURSES.CAP.EL.json  NCURSES.CAP.EL1.json  NCURSES.CAP.FLASH.json  NCURSES.CAP.HOME.json  NCURSES.CAP.SETAB.0.json  NCURSES.CAP.SETAB.4.json  NCURSES.CAP.SETAF.2.json  NCURSES.CAP.SETAF.7.json  NCURSES.COLOR.ALLOC.json  NCURSES.COLOR.CONTENT.json  NCURSES.COLOR.PAIR.json  NCURSES.COLOR_CAPS.json  NCURSES.CONFIG.json  NCURSES.CURSES.HEADER.json  NCURSES.CURSES.json  NCURSES.CURS_SET.CABI.json  NCURSES.CURS_SET.json  NCURSES.DOUPDATE.BG_PAINT.json  NCURSES.DOUPDATE.COLOR_PAINT.json  NCURSES.DOUPDATE.LINUX.json  NCURSES.DOUPDATE.VT100.json  NCURSES.DOUPDATE.json  NCURSES.ERASE.NOOUTPUT.json  NCURSES.FORM.json  NCURSES.GETMOUSE.json  NCURSES.GETNSTR.json  NCURSES.INCH.json  NCURSES.INFOCMP.json  (+44 more)
src/: attr.rs  bell.rs  color.rs  cursor.rs  lib.rs  screen.rs  slk.rs  term.rs  update.rs  vid.rs  window.rs
src/input/: keys.rs  mod.rs
src/terminfo/: caps.rs  mod.rs
tests/: doupdate_terminfo.rs  mvcur_matrix.rs  mvcur_terminfo.rs  terminfo_ext.rs
tests/fixtures/: mvcur_matrix.txt
tests/terminfo/: color_xterm  ti916-8-132  vt220  wyse520-w
tools/db-coverage/: .gitignore  README.md  attr_oracle.c  color_oracle.c  doupdate_oracle.c  incremental_oracle.c  mvcur_oracle.c  sweep.py
tools/oracle-runner/: pty_capture.py  run_oracle.py
tools/source-indexer/: extract_c_api.py  extract_keys.py  extract_terminfo_caps.py
xtask/: Cargo.toml
xtask/src/: main.rs
