[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
description = "Development tooling for ncurses-native: generates and freshness-gates the port-parity matrices."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
